--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,41 +1,72 @@
-/*
----------------------------------------------
-Índice
-------------------------------------------------
-1. Typography
-2. Main Nav
-3. Home
-4. About
-5. Work
-6. Single Work
-7. Pricing
-8. Contact
---------------------------------------------- */
-
-html {font-family: 'Open Sans', sans-serif;}
+body {
+  font-family: 'Exo 2', sans-serif;
+  background-color: #0C0009;
+}
 /* Typography */
 p, a {font-weight: 400;}
 .h2 {font-size: 40px;}
 .h3 {font-size: 28px;}
 .light-300 {
-  font-family: 'Open Sans', sans-serif !important;
+  font-family: 'Exo 2', sans-serif !important;
   font-weight: 300;
 }
 .regular-400 {
-  font-family: 'Open Sans', sans-serif !important;
+  font-family: 'Exo 2', sans-serif !important;
   font-weight: 400;
 }
 .semi-bold-600 {
-  font-family: 'Open Sans', sans-serif !important;
+  font-family: 'Exo 2', sans-serif !important;
   font-weight: 600;
 }
+
+/* Color Theme */
+.tc-theme-light-red { color: #FE4589; }
+.tc-theme-pink { color: #f09; }
+.tc-theme-sky { color: #13DCF2; }
+.tc-theme-white { color: #ffffff; }
+.bg-theme-primary { background-color: #0C0009; }
+.bg-theme-secondary { background-color: #331533; }
+
+.neonText-red {
+  text-shadow:
+    0 0 1px #f09,
+    0 0 4px #fff,
+    0 0 8px #fff,
+    0 0 12px #f09,
+    0 0 16px #f09,
+    0 0 20px #f09,
+    0 0 24px #f09,
+    0 0 32px #f09;
+}
+
+.neonText-blue {
+  text-shadow:
+    0 0 1px #13DCF2,
+    0 0 4px #fff,
+    0 0 8px #fff,
+    0 0 12px #13DCF2,
+    0 0 16px #13DCF2,
+    0 0 20px #13DCF2,
+    0 0 24px #13DCF2,
+    0 0 32px #13DCF2;
+}
+
+a{
+  color: #FFF;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #f09;
+}
+
 .typo-space-line::after,
 .typo-space-line-center::after {
   content: "";
   width: 150px;
   display:block;
   position: absolute;
-  border-bottom:  5px solid #6266ea;
+  border-bottom:  5px solid #f09;
   padding-top: .5em;
 }
 .typo-space-line-center::after {
@@ -43,10 +74,21 @@ p, a {font-weight: 400;}
   margin-left: -75px;
 }
 /* Main Nav */
-#main_nav .nav-item .nav-link:hover {color: #fff;}
+#main_nav .nav-item .nav-link {
+  color: #FFFFFF;
+  padding-bottom: 0;
+  border-bottom: 2px solid transparent;
+}
+#main_nav .nav-item .nav-link:hover {
+  color: #13DCF2;
+  border-bottom: 2px solid #FE4589;
+  box-shadow: 0 1px 2px 3px -3px #f09;
+}
+
+
 /* Home */
 #index_banner {
-  background-image: url('./../img/banner-bg-01.jpg');
+  background-image: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8)), url('./../img/banner-bg-01.jpg');
   background-position: center center; background-size: cover;
   height: 100%;
   min-height: 60vh;
@@ -55,9 +97,35 @@ p, a {font-weight: 400;}
 #index_banner .carousel-item {
   min-height: 60vh;
 }
+.neon-link{
+  color: #FFF;
+  border: 0.1rem solid #FFF;
+  transition: all 0.2s ease-in-out;
+}
+.neon-link:hover{
+  color: #FFF;
+  border: 0.1rem solid #fff;
+  padding: 0.4em;
+  box-shadow: 
+    0 0 .1rem #fff,
+    0 0 .1rem #fff,
+    0 0 1rem #f09,
+    0 0 0.1rem #f09,
+    0 0 1.4rem #f09,
+    inset 0 0 0.7rem #f09;
+  text-shadow:
+    0 0 1px #13DCF2,
+    0 0 4px #fff,
+    0 0 8px #fff,
+    0 0 12px #13DCF2,
+    0 0 16px #13DCF2,
+    0 0 20px #13DCF2,
+    0 0 24px #13DCF2,
+    0 0 32px #13DCF2;
+}
 #index_banner .carousel-control-prev i,
 #index_banner .carousel-control-next i {
-  color: #6266ea !important;
+  color: #f09 !important;
   text-decoration: none;
   font-size: 4em;
 }
@@ -66,8 +134,7 @@ p, a {font-weight: 400;}
 }
 #index_banner .carousel-indicators li,
 #index_banner .carousel-indicators.active {
-  background-color: #6266ea !important;
-  // las rayas de abajo del carrousel van de color azul
+  background-color: #13DCF2 !important;
 }
 .service-wrapper .service-footer {
   max-width: 720px;
@@ -83,39 +150,8 @@ p, a {font-weight: 400;}
   background-position: 0% 100%;
   transition: .5s;
 }
-.service-work .service-work-vertical:hover {
-  background-position: 0% 0%;
-  transition: .5s;
-}
-.service-work .service-work-vertical:hover * {
-  color: #000;
-  border-color: #000;
-  transition: .5s;
-}
-.recent-work.card{
-  border-radius: 10px !important;
-}
-.recent-work .recent-work-vertical {
-	background: rgb(255,255,255);
-  background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 33.333%, rgba(97,84,199,1) 66.666%, rgba(255,255,255,0) 99.999%);
-  background-size: 300% 300%;
-  background-position: 0% 100%;
-  transition: .5s;
-  cursor: pointer;
-}
-.recent-work .recent-work-vertical:hover {
-  background-position: 0% 0%;
-  transition: .5s;
-}
-.recent-work .recent-work-vertical:hover div.recent-work-content {
-  top: 50%;
-  margin-top: -2.5em;
-  position: absolute;
-}
-.recent-work .recent-work-vertical:hover * {
-  color: white;
-  transition: .5s;
-}
+
+
 /* About */
 #work_banner {
   background-image: url('./../img/banner-bg-02.jpg');
@@ -138,13 +174,7 @@ p, a {font-weight: 400;}
 .partner-wap:hover {
   background-color: #b1b3f5;
 }
-.why-us {
-  background: rgb(239,239,253);
-  background: -moz-linear-gradient(0deg, rgba(239,239,253,1) 50%, rgba(255,255,255,1) 50%);
-  background: -webkit-linear-gradient(0deg, rgba(239,239,253,1) 50%, rgba(255,255,255,1) 50%);
-  background: linear-gradient(0deg, rgba(239,239,253,1) 50%, rgba(255,255,255,1) 50%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#efeffd",endColorstr="#ffffff",GradientType=1);
-}
+
 .team-member-img {
   transition-duration: 0.15s;
 }
